filter dropdown layout issue

--- a/pexproject/static/flightsearch/css/main.css
+++ b/pexproject/static/flightsearch/css/main.css
@@ -1,4 +1,5 @@
 
+
 /* ==========================================================================
  Author's custom styles
  ========================================================================== */
@@ -2604,17 +2605,30 @@ div.ui-datepicker{
 		padding: 3px 0px;
 	}
 }
-
+@media (min-width: 967px) and (max-width: 991px){
+#dropdownMenu1 {
+    padding-top: 4px !important;
+}
+}
 @media (min-width: 767px) and (max-width: 991px) {
 
 
 	html, body {
     height: 100%;
     overflow-x: hidden;
-
+}
 	
 }
 
+
+@media (min-width: 992px) and (max-width: 1027px)
+{
+.travelers-holder.form-control {
+    border: 0;
+    height: 32px;
+    padding-left: 5px !important;
+}
+}
 
 @media (min-width: 768px) and (max-width: 835px) {
 	.travelers-down-menu {
@@ -2711,7 +2725,18 @@ div.ui-datepicker{
 	.navbar-collapse .nav > .divider-vertical {
 		!
 		display: none;
-	}
+	
+}
+.travelers-holder span span.caret {
+    top: 15px;
+    right: 2px;
+    position: absolute;
+}
+.travelers-holder.form-control {
+    border: 0;
+    height: 32px;
+    padding-left: 5px;
+}
 }
 @media (min-width: 768px) and (max-width: 1024px) {
 	.collapse {
